--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-  <app-marvellous-event></app-marvellous-event>
-  
+<h1>demonstration of  child  to paraent compoent communication</h1>
+<h1> inside child compoent</h1>
+
+<app-demo (MyEvent) = "messageformchild = $event" ></app-demo>
+
+
+<h1>{{messageformchild}}</h1>
