with service project

--- a/src/app/batchlist/batchlist.component.html
+++ b/src/app/batchlist/batchlist.component.html
@@ -1,6 +1,9 @@
-<h1>Names of all Batches</h1>
-    <ul *ngFor="let value of batches">
-        
-    <li>{{value.name}}
-  </li>
-<ul>
+
+<h1>Name of batches</h1>
+
+
+
+<ul *ngFor="let value of batches">
+<li>{{value.name}} </li>
+
+</ul>
