--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<h1>Inside Marvellous infoystem Portal</h1>
-<app-batchdetils></app-batchdetils>
-
+<h1>Marvellous infosystem portal</h1>
+<app-batchdetails></app-batchdetails>
 <app-batchlist></app-batchlist>
