--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<h1>Marvellous infosystem portal</h1>
-<app-batchdetails></app-batchdetails>
-<app-batchlist></app-batchlist>
+ <h1>{{Batches}}</h1>
+<div *ngFor="let value of Batches">
+   
+    <h1>{{value}}</h1>
+</div>
+<h1>{{fess}}</h1>
+<div *ngfor="let value of fess">
+<h1>{{value}}</h1>
+</div>
