--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,3 @@
- <h1>{{Batches}}</h1>
-<div *ngFor="let value of Batches">
-   
-    <h1>{{value}}</h1>
-</div>
-<h1>{{fess}}</h1>
-<div *ngfor="let value of fess">
-<h1>{{value}}</h1>
-</div>
+
+<app-template></app-template>
+
