--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -1,2 +1,9 @@
-<h2>{{batch}}</h2>
-<h2>{{Address}}</h2>
+
+
+<h1>Marvellous infosytem portal</h1>
+
+<input [(ngModel)]="batchname" type="text">
+<h1>Thankyou for selecting batch</h1>
+{{batchname}}
+
+  
